# CartesianPlanner

./: .gitignore  CMakeLists.txt  README.md  package.xml
cmake/: FindHSL.cmake
config/: config.rviz
include/cartesian_planner/: cartesian_planner.h  cartesian_planner_config.h  discretized_trajectory.h  dp_planner.h  environment.h  trajectory_nlp.h  trajectory_optimizer.h  vehicle_param.h
include/cartesian_planner/math/: aabox2d.h  box2d.h  line_segment2d.h  math_utils.h  polygon2d.h  pose.h  vec2d.h
include/cartesian_planner/visualization/: color.h  plot.h
launch/: pedestrian_test.launch
msg/: CenterLine.msg  CenterLinePoint.msg  DynamicObstacle.msg  DynamicObstacles.msg  DynamicTrajectoryPoint.msg  Obstacles.msg
script/: example.pickle  pickle_publisher.py  reference_publisher.py
src/: cartesian_planner_node.cpp
src/cartesian_planner/: cartesian_planner.cpp  discretized_trajectory.cpp  dp_planner.cpp  environment.cpp  trajectory_nlp.cpp  trajectory_optimizer.cpp
src/cartesian_planner/math/: aabox2d.cpp  box2d.cpp  line_segment2d.cpp  math_utils.cpp  polygon2d.cpp  vec2d.cpp
src/cartesian_planner/visualization/: color.cpp  plot.cpp
